Increase size of figures

--- a/manual/figures/AC.tex
+++ b/manual/figures/AC.tex
@@ -1,5 +1,5 @@
 % We used dvisvgm to render this.
-\documentclass{article}
+\documentclass[12pt]{article}
   \usepackage[all,dvips]{xy}
   \usepackage[labelformat=empty]{caption}
   \pagestyle{empty}
