--- a/manual/figures/NsgLabeling.tex
+++ b/manual/figures/NsgLabeling.tex
@@ -1,5 +1,5 @@
 % We used dvisvgm to render this.
-\documentclass{article}
+\documentclass[12pt]{article}
   \usepackage[all,dvips]{xy}
   \usepackage[labelformat=empty]{caption}
   \pagestyle{empty}
@@ -17,7 +17,7 @@
     *{}       &      *{}       &           *{\txt{AND}}           &                     *{}                     \\
     *{}       & \vl{NsgInDomain}\ar[ddl]\ar[ddr]  &   *{}         & *+<1em>[F--]{\vl{this}}\ar@{.>}@/_2em/[uul] \\
     *{}       &  *{\txt{OR}}   &               *{}                &            *{}                              \\
-\vl{NsgSetValue} &   *{}       &  \vl{NsgRemoveValue} \ar@{.}[r]^{\txt{\scriptsize\hspace{30pt} AND}} & *+<1em>[F--]{\vl{this}}\ar@{.>}@/_2em/[uull]
+\vl{NsgSetValue} &   *{}       &  \vl{NsgRemoveValue} \ar@{.}[r]^{\txt{\scriptsize\hspace{35pt} AND}} & *+<1em>[F--]{\vl{this}}\ar@{.>}@/_2em/[uull]
 }
 \]
 \caption{The combination of the goals that compose \vl{NsgLabeling}}
