Use a secure link

--- a/manual/naxos.bib
+++ b/manual/naxos.bib
@@ -1,6 +1,6 @@
 @misc{Naxos,
   author = {Pothitos, Nikolaos},
   title = {\textsc{Naxos Solver}},
-  howpublished = {\texttt{http://github.com/pothitos/naxos}},
+  howpublished = {\texttt{https://github.com/pothitos/naxos}},
   year = {2018}
 }
